--- a/plugin/Cargo.toml
+++ b/plugin/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "spicy_spirits"
-version = "1.2.0"
+name = "spirits_nickspirits"
+version = "1.0.0"
 authors = ["C# <@CSharpM7>"]
-edition = "2021"
+edition = "2018"
 
 [package.metadata.skyline]
 titleid = "01006A800016E000"
@@ -11,7 +11,7 @@ titleid = "01006A800016E000"
 crate-type = ["cdylib"]
 
 [dependencies]
-sharpsmashlinesuite = { path = "../../SharpSmashlineSuite" }
+sharpsmashlinesuite = { path = "../../../SharpSmashlineSuite" }
 skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
 skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
 smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
@@ -21,11 +21,17 @@ arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api"}
 lazy_static = "1.4.0"
 once_cell = "1.12.0"
 parking_lot = "0.11.2"
-
+spicy_spirits = { path = "../" }
 
 [profile.dev]
 panic = "abort"
 
 [profile.release]
+opt-level = 'z'
 panic = "abort"
 lto = true
+codegen-units = 1
+
+[features]
+dev = []
+devhook = []
