--- a/api/nro/Cargo.toml
+++ b/api/nro/Cargo.toml
@@ -1,17 +1,19 @@
 [package]
-name = "spicy_spirits"
+name = "spicy_spirits_nro"
 version = "1.2.0"
 authors = ["C# <@CSharpM7>"]
-edition = "2021"
+edition = "2018"
 
 [package.metadata.skyline]
 titleid = "01006A800016E000"
 
 [lib]
+name = "spicy_spirits"
 crate-type = ["cdylib"]
 
 [dependencies]
-sharpsmashlinesuite = { path = "../../SharpSmashlineSuite" }
+spicy_spirits = { path = "../" }
+sharpsmashlinesuite = { path = "../../../../SharpSmashlineSuite" }
 skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
 skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
 smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
