--- a/plugin/Cargo.toml
+++ b/plugin/Cargo.toml
@@ -21,7 +21,7 @@ arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api"}
 lazy_static = "1.4.0"
 once_cell = "1.12.0"
 parking_lot = "0.11.2"
-spicy_spirits = { path = "../" }
+spicy_spirits = { path = "../api" }
 
 [profile.dev]
 panic = "abort"
