--- a/plugin/Cargo.toml
+++ b/plugin/Cargo.toml
@@ -18,9 +18,10 @@ smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "
 smashline = { git = "https://github.com/HDR-Development/smashline" }
 smash_singletons = { git = "https://github.com/WuBoytH/smash_singletons.git" }
 arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api"}
-lazy_static = "1.4.0"
-once_cell = "1.12.0"
-parking_lot = "0.11.2"
+skyline-web = { git = "https://github.com/skyline-rs/skyline-web" }
+#lazy_static = "1.4.0"
+#once_cell = "1.12.0"
+#parking_lot = "0.11.2"
 spicy_spirits = { path = "../api" }
 
 [profile.dev]
