--- a/plugin/Cargo.toml
+++ b/plugin/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "spirits_nickspirits"
+name = "spirits_exampleplugin"
 version = "1.0.0"
 authors = ["C# <@CSharpM7>"]
 edition = "2018"
@@ -11,7 +11,6 @@ titleid = "01006A800016E000"
 crate-type = ["cdylib"]
 
 [dependencies]
-sharpsmashlinesuite = { path = "../../../SharpSmashlineSuite" }
 skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
 skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
 smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
@@ -22,7 +21,7 @@ skyline-web = { git = "https://github.com/skyline-rs/skyline-web" }
 #lazy_static = "1.4.0"
 #once_cell = "1.12.0"
 #parking_lot = "0.11.2"
-spicy_spirits = { path = "../api" }
+spicy_spirits = { git = "https://github.com/CSharpM7/libspicy_spirits.git" }
 
 [profile.dev]
 panic = "abort"
